# dataset-onboarding-reviewer-workflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  artifacts.md  demo_workflow.md  design_principles.md  example_commands.md  roadmap.md
examples/: customer_onboarding_context.yaml  customer_onboarding_sample.csv  customer_reviewer_answers.yaml
src/dataset_onboarding_reviewer_workflow/: __init__.py  cli.py  context_loader.py  gap_assessor.py  graph.py  intake.py  llm_client.py  nodes.py  output_writers.py  profiling.py  question_input_builder.py  report_builder.py  reviewer_answers_loader.py  reviewer_questions.py  state.py
tests/: helpers.py  test_cli.py  test_context_loader.py  test_gap_assessor.py  test_graph.py  test_intake.py  test_llm_client.py  test_nodes.py  test_output_writers.py  test_profiling.py  test_question_input_builder.py  test_report_builder.py  test_reviewer_answers_loader.py  test_reviewer_questions.py  test_version.py
