[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset-onboarding-reviewer-workflow"
version = "0.1.0"
description = "Local-first dataset onboarding intake and safe profiling workflow."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Adam Ojrzynski" }
]
dependencies = [
  "langgraph",
  "pandas",
  "openpyxl",
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
llm = [
  "openai",
]

[project.scripts]
dataset-onboarding-reviewer = "dataset_onboarding_reviewer_workflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_onboarding_reviewer_workflow"]
